# payy

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
eth/: .eslintrc.json  .gitignore  README.md  bun.lockb  hardhat.config.ts  package.json
eth/artifacts/contracts/IUSDC.sol/: IUSDC.json
eth/artifacts/contracts/rollup/RollupV1.sol/: RollupV1.d.ts  RollupV1.dbg.json  RollupV1.json  artifacts.d.ts
eth/contracts/: AggregateVerifierV1.sol  BurnVerifierV1.sol  IUSDC.sol  MintVerifierV1.sol  Verifier.sol
eth/contracts/rollup/: README.md  RollupV1.sol  RollupV2.sol  RollupV3.sol  RollupV4.sol
eth/scripts/: deploy.ts  upgrade.ts
fixtures/params/: kzg_bn254_14.srs  kzg_bn254_6.srs  kzg_bn254_8.srs  kzg_bn254_9.srs
fixtures/proofs/: agg_agg_final_evm_proof.proof  agg_utxo_0.proof  agg_utxo_1.proof  agg_utxo_agg.proof
pkg/contracts/: Cargo.toml  README.md
pkg/contracts/src/: client.rs  constants.rs  empty_merkle_tree_root_hash.txt  error.rs  lib.rs  rollup.rs  tests.rs  usdc.rs  util.rs  wallet.rs
pkg/primitives/: Cargo.toml
pkg/primitives/src/: block_height.rs  hash.rs  lib.rs  pagination.rs  peer.rs  pool.rs  sig.rs  tick_worker.rs  u256.rs  util.rs
pkg/smirk/: Cargo.toml
pkg/smirk/benches/: storage_load.rs
pkg/smirk/proptest-regressions/storage/: tests.txt
pkg/smirk/proptest-regressions/tree/: insert.txt  path.txt  tree_repr.txt
pkg/smirk/src/: hash.rs  lib.rs  macros.rs
pkg/smirk/src/batch/: merge.rs  mod.rs  proptest.rs
pkg/smirk/src/hash_cache/: mod.rs
pkg/smirk/src/hash_cache/metrics/: mod.rs
pkg/smirk/src/storage/: batch.rs  error.rs  format.rs  load.rs  mod.rs  store.rs  tests.rs
pkg/smirk/src/tree/: batch.rs  error.rs  insert.rs  iter.rs  known_hashes.rs  mod.rs  path.rs  proptest.rs  raw_api.rs  tree_repr.rs
pkg/testutil/: Cargo.toml
pkg/testutil/src/: eth.rs  lib.rs
pkg/wire-message/: Cargo.toml
pkg/wire-message-macro/: Cargo.toml
pkg/wire-message-macro/src/: lib.rs
pkg/wire-message/src/: error.rs  lib.rs  test_api.rs
pkg/wire-message/tests/: example.rs
pkg/zk-circuits/: Cargo.toml  README.md
pkg/zk-circuits/benches/: aggregate.rs
pkg/zk-circuits/src/: constants.rs  data.rs  error.rs  evm_verifier.rs  fr.rs  lib.rs  params.rs  proof.rs  proof_format.rs  util.rs
pkg/zk-circuits/src/aggregate_agg/: aggregate.rs  aggregate_verifier.yul  circuit.rs  mod.rs  tests.rs
pkg/zk-circuits/src/aggregate_utxo/: aggregate.rs  circuit.rs  constants.rs  mod.rs  tests.rs
pkg/zk-circuits/src/burn/: burn.rs  burn_verifier.yul  circuit.rs  mod.rs  tests.rs
pkg/zk-circuits/src/chips/: add.rs  binary_decomposition.rs  is_constant.rs  is_less_than.rs  is_zero.rs  merkle_path.rs  mod.rs  poseidon.rs  sig.rs  swap.rs
pkg/zk-circuits/src/chips/aggregation/: aggregate.rs  constants.rs  mod.rs  snark.rs  types.rs
pkg/zk-circuits/src/compliance/: circuit.rs  compliance.rs  mod.rs
pkg/zk-circuits/src/data/: delegates.rs
pkg/zk-circuits/src/insert/: batch.rs  circuit.rs  insert.rs  mod.rs
pkg/zk-circuits/src/keys/: mod.rs
pkg/zk-circuits/src/keys/vk/: agg_agg_2  points  utxo  utxo_agg_3_161_12
pkg/zk-circuits/src/mint/: circuit.rs  mint.rs  mint_verifier.yul  mod.rs  tests.rs
pkg/zk-circuits/src/points/: circuit.rs  mod.rs  points.rs  tests.rs
pkg/zk-circuits/src/signature/: circuit.rs  mod.rs  signature.rs
pkg/zk-circuits/src/test/: agg_agg.rs  agg_utxo.rs  fs.rs  mod.rs  rollup.rs  util.rs
pkg/zk-circuits/src/utxo/: circuit.rs  input_note.rs  mod.rs  note.rs  proof.rs  tests.rs  utxo.rs
pkg/zk-primitives/: Cargo.toml
pkg/zk-primitives/examples/: hash_merge.rs
pkg/zk-primitives/src/: hash.rs  lib.rs  path.rs
pkg/zk-primitives/src/element/: arith.rs  borsh_impls.rs  collision.rs  convert.rs  fmt.rs  halo2.rs  lsb.rs  mod.rs  rand_impls.rs  serde.rs
pkg/zk-primitives/src/snapshots/: zk_primitives__hash__tests__hash_bytes_snapshot_test.snap  zk_primitives__hash__tests__hash_merge_snapshot_test.snap
