[package]
name = "primitives"
version = "1.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
borsh = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uint = { workspace = true }
parking_lot = { workspace = true }
microtype = { workspace = true }
rand_derive2 = { workspace = true }
base64 = { workspace = true }
