[package]
name = "zk-circuits"
version = "1.1.12"
edition = "2021"

[dependencies]
smirk = { workspace = true, default-features = false, features = ["serde"] }
zk-primitives = { workspace = true, default-features = false, features = [
  "serde",
] }
primitives = { workspace = true }

base64 = { workspace = true }
bitvec = { workspace = true }
blake2b_simd = { workspace = true }
eth-types = { workspace = true }
halo2-base = { workspace = true }
halo2-ecc = { workspace = true }
halo2_gadgets = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
poseidon-circuit = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snark-verifier = { workspace = true }
snark-verifier-sdk = { workspace = true }
thiserror = { workspace = true }
uint = { workspace = true }
zkevm-circuits = { workspace = true }
borsh = { workspace = true }
wire-message = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
expect-test = { workspace = true }
sha3 = { workspace = true }


[dev-dependencies]
ethereum-types = { workspace = true }
serde_json = { workspace = true }
benchy = { workspace = true }
sha3 = { workspace = true }

[features]
test = []
default = ["test"]

[[bench]]
name = "aggregate"
harness = false
